<resources>
    <string name="app_name">Agenda2</string>

    <!--MainActivity-->
    <string name="Btn_Login">Login</string>
    <string name="Btn_Registro">Registro</string>

    <!--Actividad Registro-->
    <string name="CrearCuentaTXT">Crear una Cuenta</string>
    <string name="NombreEt">Nombre</string>
    <string name="CorreoEt">Correo Electronico</string>

    <string name="ApellidoEt">Apellido</string>
    <string name="TelefonoEt">Teléfono</string>
    <string name="AliasEt">Alias o Nickname</string>
    <string name="AvatarEt">Seleccionar Imagen de Perfil</string>
    <string name="btnSeleccionarImagen">Subir Imagen</string>

    <string name="ContraseñaEt">Contraseña</string>
    <string name="ConfirmarContraseñaEt">Confirmar contraseña</string>
    <string name="RegistrarUsuario">Registrar</string>
    <string name="TengounacuentaTXT">Tengo una cuenta</string>

    <!--ACTIVIDAD LOGIN-->
    <string name="IniciarSesionTXT">Iniciar sesión</string>
    <string name="CorreoLogin">Correo</string>
    <string name="PassLogin">Contraseña</string>
    <string name="Btn_Logeo">Ingresar</string>
    <string name="UsuarioNuevoTXT">¿No tienes una cuenta?. Regístrate</string>

    <!--MENÚ PRINCIPAL-->
    <string name="BienvenidoPrincipal">Bienvenido(a)</string>
    <string name="UidPrincipal"> -- </string>
    <string name="AliasPrincipal"> -- </string>
    <string name="CorreoPrincipal"> -- </string>

    <string name="AgregarNotas">Agregar</string>
    <string name="ListarNotas">Mis Notas</string>
    <string name="Archivados">Archivados</string>
    <string name="Perfil">Perfil</string>
    <string name="AcercaDe">Acerca De</string>
    <string name="CerrarSesion">Salir</string>

    <!-- Perfil del usuario -->
    <string name="Perfil_Titulo">Mi perfil</string>
    <string name="Perfil_Id">ID de usuario</string>
    <string name="Perfil_Alias">Alias</string>
    <string name="Perfil_Gmail">Correo electrónico</string>
    <string name="Perfil_Nombre">Nombre</string>
    <string name="Perfil_Apellido">Apellido</string>
    <string name="Perfil_Telefono">Teléfono</string>
    <string name="Perfil_Contrasena">Contraseña</string>
    <string name="Perfil_Imagen">Imagen de perfil</string>
    <string name="Perfil_FechaRegistro">Fecha de registro</string>
    <string name="Perfil_GuardarCambios">Guardar cambios</string>
    <string name="Perfil_Editar">Editar perfil</string>
    <string name="Perfil_Actualizar">Actualizar</string>
    <string name="Perfil_CambiarContrasena">Cambiar Contraseña</string>

    <!-- Imagen de perfil -->
    <string name="Perfil_BtnElegirImagenDe">Elegir imagen desde</string>
    <string name="Perfil_BtnActualizarImagen">Actualizar imagen</string>

    <!-- Cambio de contraseña -->
    <string name="Perfil_ActualPassTXT">Contraseña actual:</string>
    <string name="Perfil_ActualPass">--</string>
    <string name="Perfil_EtActualPass">Contraseña actual</string>
    <string name="Perfil_EtNuevoPass">Nueva contraseña</string>
    <string name="Perfil_EtRNuevoPass">Repetir nueva contraseña</string>
    <string name="Perfil_BtnActualizarPass">Actualizar contraseña</string>

    <!-- Agregar Contacto -->
    <string name="Titulo">Título de la nota</string>
    <string name="Descripcion">Descripción</string>
    <string name="Btn_Calendario">Seleccionar Fecha</string>
    <string name="Fecha">Fecha del evento</string>
    <string name="Estado">Estado de la nota (pendiente/finalizado)</string>
    <string name="Fecha_hora_actual_TXT">Fecha de creación:</string>
    <string name="Fecha_hora_actual">Fecha actual</string>
    <string name="Uid_Usuario">ID del Usuario</string>
    <string name="Correo_usuario">Correo del Usuario</string>
    <string name="Btn_GuardarNota">Guardar Nota</string>

    <string name="Btn_SeleccionarImagenAgenda">Seleccionar Imagen</string>
    <string name="ImagenPreviewAgenda">Imagen</string>
    <!-- Arrays para los spinners -->
    <string-array name="tipo_nota_array">
        <item>Nota</item>
        <item>Tarea</item>
        <item>Cita</item>
    </string-array>

    <string-array name="prioridad_array">
        <item>Alta</item>
        <item>Media</item>
        <item>Baja</item>
    </string-array>

    <string-array name="estados_array">
        <item>Pendiente</item>
        <item>Finalizado</item>

    </string-array>

    <string name="tvTitulo">Titulo</string>
    <string name="tvDescripcion">Desc</string>
    <string name="tvFecha">Fecha</string>

    <string name="recyclerNotas">Rec</string>

    <string name="etTitulo">Titulo</string>
    <string name="etDescripcion">Descripcion</string>
    <string name="etFecha">Fecha</string>
    <string name="etbtnGuardar">Guardar</string>
</resources>