<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center"
        >
        <!--Animacion-->
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="Calendario.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="true">

        </com.airbnb.lottie.LottieAnimationView>

        <!--Titulo-->
        <TextView
            android:text="@string/app_name"
            android:textSize="30sp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

        <!--Boton Login-->
        <Button
            android:id="@+id/Btn_Login"
            android:text="@string/Btn_Login"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>

        <!--Boton Registro-->
        <Button
            android:id="@+id/Btn_Registro"
            android:text="@string/Btn_Registro"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>
    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>